$Id$

2.1.5-pre-1
	Added a licence
	The 'personalbell' variable can now be set to 'on' 'off' or
	  the name of a filter to match against
	
2.1.4
	Normalize and downcase AIM names for logging
	Fixed a bug where sending a null zsig could cause a crash
	Better 'away' toggling if only one protocol is away.

2.1.3
	Added perl filter elements.  Similar to having "filter <subfilter>"
	  in a filter, you may also have "perl <functionname>"
	  where <functionname> is passed an owl::Message object and
	  returns 0 or 1 depending on whether the message matches
	  that element of the filter.
	Don't print an error about loading subs if there is no
	  .zephyr.subs
	Do the initial zephyr_buddy_check when pseduologin set to true.
	Updated man page
	
2.1.2
	removed unused filter_depth variable
	Fixed memory bug on receiving pings
	
2.1.1
	Filters of filters now work.
	Removed the "possibly not readable" part of the config parsing
  	  error
	In the sepbar, reverse video the view name when it's not set to
	  view_home (as opposed to the static 'all').
	The '!' key (bound to 'view -r') now creates a negative version of
	  the current view and switches to it.  i.e. "show me all the
	  messages that are not these"
	Added the 'ignorelogins' variable
	Log when outgoing personal message fails
	Removed file descriptor from sigpipe catcher printer just for now,
	  since the field does not exist on OSX
	Added an ifndef for socklen_t in libfaim/ft.c
	Added the 'aim search' command.  The popup on callback may be
	  dangerous, should switch to an admin msg for results, or add a
	  new event queue
	First pass at AIM away messages.  It is a little different from
	  what most clients seem to do, in that an away reply is sent for
	  each message received.  Most clients only reply to the first one
	  per away-session.
	Now have a set of 'aaway' commands and variables just like the
	  'zaway' ones (except that changing the 'aaway' variable talks to
	  the server)