@@ -150,6 +150,12 @@ static owl_variable variables_to_init[] = {
 	       "for AIM, zephyr, or other protocols.  If disabled Owl will not print\n"
 	       "login or logout notifications.\n"),
 
+  OWLVAR_BOOL( "loglogins" /* %OwlVarStub */, 0,
+	       "Enable logging of login notifications",
+	       "When this is enabled, Owl will login login and logout notifications\n"
+	       "for AIM, zephyr, or other protocols.  If disabled Owl will not print\n"
+	       "login or logout notifications.\n"),
+
   OWLVAR_ENUM_FULL( "disable-ctrl-d" /* %OwlVarStub:lockout_ctrld */, 1,
 		    "don't send zephyrs on C-d",
 		    "If set to 'off', C-d won't send a zephyr from the edit\n"
